wip; switching languages still doesn't work

--- a/resources/xlf/de/sql.de.xlf
+++ b/resources/xlf/de/sql.de.xlf
@@ -877,7 +877,7 @@
   </file>
   <file original="src/sql/workbench/services/notebook/browser/notebookServiceImpl" source-language="en" datatype="plaintext" target-language="de">
     <body>
-      <trans-unit id="notebookUriNotDefined">
+      <trans-unit id="resourceNotDefined">
         <source xml:lang="en">No URI was passed when creating a notebook manager</source>
         <target state="translated">Bei der Erstellung eines Notebook-Managers wurde kein URI übergeben.</target>
       </trans-unit>
