--- a/resources/xlf/es/sql.es.xlf
+++ b/resources/xlf/es/sql.es.xlf
@@ -877,7 +877,7 @@
   </file>
   <file original="src/sql/workbench/services/notebook/browser/notebookServiceImpl" source-language="en" datatype="plaintext" target-language="es">
     <body>
-      <trans-unit id="notebookUriNotDefined">
+      <trans-unit id="resourceNotDefined">
         <source xml:lang="en">No URI was passed when creating a notebook manager</source>
         <target state="translated">No se pasó ninguna URI al crear el administrador de cuadernos</target>
       </trans-unit>
