--- a/resources/xlf/fr/sql.fr.xlf
+++ b/resources/xlf/fr/sql.fr.xlf
@@ -877,7 +877,7 @@
   </file>
   <file original="src/sql/workbench/services/notebook/browser/notebookServiceImpl" source-language="en" datatype="plaintext" target-language="fr">
     <body>
-      <trans-unit id="notebookUriNotDefined">
+      <trans-unit id="resourceNotDefined">
         <source xml:lang="en">No URI was passed when creating a notebook manager</source>
         <target state="translated">Aucun URI passé pendant la création d'un gestionnaire de notebook</target>
       </trans-unit>
