--- a/resources/xlf/ja/sql.ja.xlf
+++ b/resources/xlf/ja/sql.ja.xlf
@@ -877,7 +877,7 @@
   </file>
   <file original="src/sql/workbench/services/notebook/browser/notebookServiceImpl" source-language="en" datatype="plaintext" target-language="ja">
     <body>
-      <trans-unit id="notebookUriNotDefined">
+      <trans-unit id="resourceNotDefined">
         <source xml:lang="en">No URI was passed when creating a notebook manager</source>
         <target state="translated">ノートブック マネージャーを作成するときに URI が渡されませんでした</target>
       </trans-unit>
