--- a/resources/xlf/zh-hant/sql.zh-Hant.xlf
+++ b/resources/xlf/zh-hant/sql.zh-Hant.xlf
@@ -877,7 +877,7 @@
   </file>
   <file original="src/sql/workbench/services/notebook/browser/notebookServiceImpl" source-language="en" datatype="plaintext" target-language="zh-HANT">
     <body>
-      <trans-unit id="notebookUriNotDefined">
+      <trans-unit id="resourceNotDefined">
         <source xml:lang="en">No URI was passed when creating a notebook manager</source>
         <target state="translated">建立筆記本管理員時未傳遞任何 URI</target>
       </trans-unit>
